--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -77,6 +77,11 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
+
+    //
+    apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
+//
+
     namespace "com.mightyattendance"
     defaultConfig {
         applicationId "com.mightyattendance"
